# altint

./: CMakeLists.txt  README.md  main.cpp
types/: altint.h
types/core/: conversion.hpp  integer.hpp  operators.hpp
types/include/: int40.h  int48.h  int56.h
types/int24_t/: int24_t.cpp  int24_t.h  uint24_t.cpp  uint24_t.h
types/int40_t/: int40_t.cpp  int40_t.h  uint40_t.cpp  uint40_t.h
types/int48_t/: int48_t.cpp  int48_t.h  uint48_t.cpp  uint48_t.h
types/int56_t/: int56_t.cpp  int56_t.h  uint56_t.cpp  uint56_t.h
